Another suggestion, HdfFileBuilder