@@ -28,7 +28,8 @@ public class App {
                 reader.readFile(channel);
 //                printData(channel, reader.getCompoundDataType(), reader.getDataAddress(), reader.getDimension());
 //                trySpliterator(channel, reader);
-                new HdfConstruction().buildHfd();
+//                new HdfConstruction().buildHfd();
+                tryHdfFileBuilder();
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -55,11 +56,44 @@ public class App {
 
         int[] dimensionSizes=new int[] {0, 0, 0, 0};
 // Define a dataset with correct CompoundDataType members
-        List<CompoundDataType.Member> members = Arrays.asList(
-                new CompoundDataType.Member("shipmentId", 0, 0, 0, dimensionSizes, new CompoundDataType.FixedPointMember(8, false, false, false, false, 0, 64)),
-                new CompoundDataType.Member("origCountry", 8, 0, 0, dimensionSizes,new CompoundDataType.StringMember(2, 0, "Null Terminate", 0, "ASCII"))
+        // DataTypeMessage with CompoundDataType
+        List<CompoundDataType.Member> members = List.of(
+                new CompoundDataType.Member("Id", 0, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(8, false, false, false, false, 0, 64)),
+                new CompoundDataType.Member("origCountry", 8, 0, 0, new int[4],
+                        new CompoundDataType.StringMember(2, 0, "Null Terminate", 0, "ASCII")),
+                new CompoundDataType.Member("origSlic", 10, 0, 0, new int[4],
+                        new CompoundDataType.StringMember(5, 0, "Null Terminate", 0, "ASCII")),
+                new CompoundDataType.Member("origSort", 15, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(1, false, false, false, false, 0, 8)),
+                new CompoundDataType.Member("destCountry", 16, 0, 0, new int[4],
+                        new CompoundDataType.StringMember(2, 0, "Null Terminate", 0, "ASCII")),
+                new CompoundDataType.Member("destSlic", 18, 0, 0, new int[4],
+                        new CompoundDataType.StringMember(5, 0, "Null Terminate", 0, "ASCII")),
+                new CompoundDataType.Member("destIbi", 23, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(1, false, false, false, false, 0, 8)),
+                new CompoundDataType.Member("destPostalCode", 40, 0, 0, new int[4],
+                        new CompoundDataType.StringMember(9, 0, "Null Terminate", 0, "ASCII")),
+                new CompoundDataType.Member("shipper", 24, 0, 0, new int[4],
+                        new CompoundDataType.StringMember(10, 0, "Null Terminate", 0, "ASCII")),
+                new CompoundDataType.Member("service", 49, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(1, false, false, false, false, 0, 8)),
+                new CompoundDataType.Member("packageType", 50, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(1, false, false, false, false, 0, 8)),
+                new CompoundDataType.Member("accessorials", 51, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(1, false, false, false, false, 0, 8)),
+                new CompoundDataType.Member("pieces", 52, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(2, false, false, false, false, 0, 16)),
+                new CompoundDataType.Member("weight", 34, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(2, false, false, false, false, 0, 16)),
+                new CompoundDataType.Member("cube", 36, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(4, false, false, false, false, 0, 32)),
+                new CompoundDataType.Member("committedTnt", 54, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(1, false, false, false, false, 0, 8)),
+                new CompoundDataType.Member("committedDate", 55, 0, 0, new int[4],
+                        new CompoundDataType.FixedPointMember(1, false, false, false, false, 0, 8))
         );
-        builder.addDataset("shipmentData", 800, members, new long[]{12345, 67890});
+        builder.addDataset("shipmentData", 800, members, new long[]{1750}, new long[]{98000});
 
 // Define a B-Tree for group indexing
         builder.addBTree(1880, "Demand");
